--- a/Problems/lesson-info.yaml
+++ b/Problems/lesson-info.yaml
@@ -60,3 +60,5 @@ content:
 - Check whether a number is prime
 - Sherlock Holmes and the mystery of anagrams
 - The star figure
+- Creating list
+- Pretty looking pattern
