--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/210138/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Fri, 05 Feb 2021 15:31:24 UTC
+update_date: Mon, 15 Feb 2021 15:45:12 UTC
 stages:
 - id: 348
   step: 5490
@@ -255,7 +255,7 @@ topics:
   4:
   - title: Reading files
     theory_id: 3636
-  - title: Working with shared data and problems
+  - title: Shared data
     theory_id: 3610
   - title: Thread synchronization
     theory_id: 3557
